# omnihand_mujoco_moveit2

./: .gitignore  MUJOCO_LOG.TXT  README.md  humanoid.xml
src/Omnihand-2025-SDK/: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh_CN.md
src/Omnihand-2025-SDK/assets/rviz/: omnihand.rviz  omnihand_left.rviz
src/Omnihand-2025-SDK/assets/urdf/: omnihand_left.urdf  omnihand_right.urdf
src/Omnihand-2025-SDK/cmake/: CheckPythonPackage.cmake  GetSerial.cmake
src/Omnihand-2025-SDK/document/en/: API_CPP.md  API_PYTHON.md
src/Omnihand-2025-SDK/document/zh_cn/: API_CPP.md  API_PYTHON.md  API_ROS2.md
src/Omnihand-2025-SDK/examples/: CMakeLists.txt  main.cc
src/Omnihand-2025-SDK/node/: CMakeLists.txt  package.xml
src/Omnihand-2025-SDK/node/node_msg/: CMakeLists.txt  package.xml
src/Omnihand-2025-SDK/node/scripts/: control_mode.py  cuerrent_report.py  current_threshold.py  error_report_sub.py  mix_control_pub.py  motor_angle.py  motor_pos_pub.py  motor_pos_sub.py  motor_vel_pub.py  motor_vel_sub.py  tactiles_sensor.py  temperature_report.py
src/Omnihand-2025-SDK/node/src/: hand_node.cpp  hand_node.h  main.cpp
src/Omnihand-2025-SDK/python/: CMakeLists.txt  MANIFEST.in  README.md  binding.cc  pyproject.toml  setup.py
src/Omnihand-2025-SDK/python/example/: demo_get_hardware_info.py  demo_monitor_current.py  demo_monitor_error.py  demo_monitor_temperature.py  demo_set_angle.py  demo_set_motion.py  demo_set_motor.py  demo_set_torque.py  demo_tactile_sensor.py
src/Omnihand-2025-SDK/python/omnihand_2025/: __init__.py  __init__.pyi
src/Omnihand-2025-SDK/python/tools/: gui.py
src/Omnihand-2025-SDK/src/: CMakeLists.txt  c_agibot_hand_base.cc  c_agibot_hand_base.h  export_symbols.h  proto.h
src/Omnihand-2025-SDK/src/can_bus_device/: c_can_bus_device.cc  c_can_bus_device.h
src/Omnihand-2025-SDK/src/kinematics_solver/: kinematics_solver.cc  kinematics_solver.h
src/hand_control/: CMakeLists.txt  package.xml
src/hand_control/launch/: hand_control.launch.py
src/hand_control/src/: hand_control.cpp
src/hand_description/launch/: hand_description.launch.py
src/hand_description/mjcf/: my_hand.xml  scene.xml
src/hand_description/rviz/: mujoco.rviz  omnihand_right.rviz
src/hand_description/src/: hand_description.cpp
src/hand_description/srdf/: omnihand_left.srdf
src/hand_description/urdf/: omnihand_left copy 2.urdf  omnihand_left.urdf
src/hand_moveit/: .setup_assistant  package.xml
src/hand_moveit/config/: kinematics.yaml  moveit_controllers.yaml  omnihand.ros2_control.xacro  omnihand.srdf  ros2_controllers.yaml
src/hand_moveit/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py
src/hand_mujoco_launch/: CMakeLists.txt
src/hand_mujoco_launch/launch/: hand_mujoco.launch.py
src/hand_shape/launch/: hand_shape.launch.py
src/hand_shape/param/: hand_shape.yaml
src/hand_test/hand_description/: CMakeLists.txt  package.xml
src/hand_test/hand_gui/: package.xml  setup.cfg  setup.py
src/hand_test/hand_gui/hand_gui/: gui_node.py
src/hand_test/hand_moveit/: CMakeLists.txt
src/hand_test/hand_mujoco_launch/: package.xml
src/hand_test/hand_shape/: CMakeLists.txt  package.xml
src/hand_test/hand_test_bag/: CMakeLists.txt  package.xml
src/hand_test/omnihand_node/: CMakeLists.txt  package.xml
src/hand_test/omnihand_node/include/omnihand_node/: hand_node.h
src/hand_test/omnihand_node/src/: hand_node.cpp  main.cpp
src/hand_test/omnihand_node_msgs/: CMakeLists.txt  package.xml
src/hand_test_bag/rviz/: default.rviz
src/hand_test_bag/src/: hand_test.cpp
src/omnihand_node_msgs/: CMakeLists.txt
(+58 files in other folders)
